--- a/index.html
+++ b/index.html
@@ -1,8 +1,30 @@
 <HTML>
 <HEAD>
 <meta charset="utf-8">
-<title>12345</title>
+<title>Me and the boys</title>
 </HEAD>
 <BODY background="images/bg.jpg">
+    <table border="1" align="center" cellpadding="10">
+            <tr>
+                <td colspan="2" height="150" align="right">Me and the boys</td>
+            </tr>
+            <tr>
+                <td colspan="2">horisont</td>
+            </tr>
+            <tr>
+                <td width="30%" valign="top">left</td>
+            </tr>
+            <tr>
+                <td width="70%">text</td>
+            </tr>
+            <tr>
+                <td colspan="2" valign="middle" height="90">down</td>
+            </tr>
+
+
+
+
+
+    </table>
 </BODY>
 </HTML>
