--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <HTML>
 <HEAD>
 <meta charset="utf-8">
-<title>Me and the boys</title>
+<title>Me and the boysgit</title>
 </HEAD>
-<BODY background="images/bg.jpg">
+<BODY background="images/bbgg.jpg">
     <table border="1" align="center" cellpadding="10">
-            <tr>
-                <td colspan="2" height="150" align="right">Me and the boys</td>
-            </tr>
+        <tr>
+            <td colspan="2" height="150" align="right">
+                <font color="Maroon"><h1 class="shadowtext">Me and the boys</h1></font>
+                <img src="images/logo.png" height="140" width="140" align="left">
+            </td>
+        </tr>
             <tr>
                 <td colspan="2">horisont</td>
             </tr>
