--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
         <tr>
             <td colspan="2" height="150" align="right">
                 <font color="Maroon"><h1 class="shadowtext">Me and the boys</h1></font>
-                <img src="images/logo.png" height="140" width="140" align="left">
+                <img src="images/logo.png" height="140" width="140" align="left">giy
             </td>
         </tr>
             <tr>
-                <td colspan="2">horisont</td>
+                <td colspan="2">
+                    <font size="4"><b>
+                        <a href="#">Головна</a>
+                        <a href="#">Фотогалерея</a>
+                        <a href="#">Телефони</a>
+                        <a href="#">Статистика</a>
+                        <a href="#">Зареєстровані</a>
+                    </b></font>
+                </td>
             </tr>
             <tr>
                 <td width="30%" valign="top">left</td>
