--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <tr>
             <td colspan="2" height="150" align="right">
                 <font color="Maroon"><h1 class="shadowtext">Me and the boys</h1></font>
-                <img src="images/logo.png" height="140" width="140" align="left">giy
+                <img src="images/logo.png" height="140" width="140" align="left">
             </td>
         </tr>
             <tr>
@@ -23,7 +23,19 @@
                 </td>
             </tr>
             <tr>
-                <td width="30%" valign="top">left</td>
+                <td width="30%" valign="top">
+                    <font size = "5" color="navy"><h2>Новини</h2></font>
+                    <font size = "5">
+                        <ul>
+                            <li><a href="">Сайт будівельної компанії</a></li>
+                            <li><a href="">Сайт ТМ "Новашкола"</a></li>
+                            <li><a href="">Редизайн сайту classno.com.ua</a></li>
+                            <li><a href="">Розробка CMS для Metro Cash&Carry</a></li>
+                            <li><a href="">Сайт-візитка дизайнера інтерфейсів</a></li>
+                            <p align="right"><a href="">other...</a></p>
+                        </ul>
+                    </font>
+                </td>
             </tr>
             <tr>
                 <td width="70%">text</td>
