--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                 <td width="70%">text</td>
             </tr>
             <tr>
-                <td colspan="2" valign="middle" height="90">down</td>
+                <td colspan="2" valign="middle" height="90">
+                    <font size="4">Сайт зробив Toha229</font>
+                </td>
             </tr>
 
 
