--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <HEAD>
 <meta charset="utf-8">
 <title>Me and the boysgit</title>
+<style>
+.shadowtext {
+    text-shadow: 1px 3px 2px white, 0 0 1em red;
+    color: #210042;
+    font-size: 2em;
+}
+</style>
 </HEAD>
 <BODY background="images/bbgg.jpg">
     <table border="1" align="center" cellpadding="10">
