--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 }
 </style>
 </HEAD>
-<BODY background="images/bbgg.jpg">
+<BODY background="images/bg.jpg">
     <table border="1" align="center" cellpadding="10">
         <tr>
             <td colspan="2" height="150" align="right">
