--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <BODY background="images/bg.jpg">
     <table border="1" align="center" cellpadding="10">
         <tr>
-            <td colspan="2" height="150" align="right">
+            <td background="images/bg-3.jpg" colspan="2" height="150" align="right">
                 <font color="Maroon"><h1 class="shadowtext">Me and the boys</h1></font>
                 <img src="images/logo.png" height="140" width="140" align="left">
             </td>
