--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <td width="70%">text</td>
             </tr>
             <tr>
-                <td colspan="2" valign="middle" height="90">
+                <td background="images/bg.jpg" colspan="2" valign="middle" height="90">
                     <font size="4">Сайт зробив Toha229)</font>
                 </td>
             </tr>
