--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@ function send()
     font-size: 2em;
 }
 </style>
+<script>
+windows.onload = function() {
+    setInterval(clockPainting, 1000);
+}
+</script>
 </HEAD>
 <BODY background="images/bg.jpg">
     <table border="1" align="center" cellpadding="10">
@@ -58,6 +63,8 @@ function send()
             </tr>
             <tr>
                 <td width="30%" valign="top">
+                    <center><canvas id="canvas" height="120" width="120"></canvas></center>
+                    <hr>
                     <font size = "5" color="navy"><h2>Новини</h2></font>
                     <font size = "5">
                         <ul>
