--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta charset="utf-8">
 <title>Me and the boysgit</title>
 
+<script src="js/clock1.js"></script>
 <script type="text/javascript">
 function send()
 
@@ -37,7 +38,7 @@ function send()
 }
 </style>
 <script>
-windows.onload = function() {
+window.onload = function() {
     setInterval(clockPainting, 1000);
 }
 </script>
@@ -47,7 +48,7 @@ windows.onload = function() {
         <tr>
             <td background="images/bg-3.jpg" colspan="2" height="150" align="right">
                 <font color="Maroon"><h1 class="shadowtext">Me and the boys</h1></font>
-                <img src="images/logo.png" height="140" width="140" align="left">
+                <img src="images/logoo.png" height="140" width="140" align="left">
             </td>
         </tr>
             <tr>
