--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ window.onload = function() {
     <table border="1" align="center" cellpadding="10">
         <tr>
             <td background="images/bg-3.jpg" colspan="2" height="150" align="right">
-                <font color="Maroon"><h1 class="shadowtext">Me and the boys</h1></font>
+                <font color="Maroon"><h1 class="shadowtext">Сайт студії "Web-DECO"</h1></font>
                 <img src="images/logoo.png" height="140" width="140" align="left">
             </td>
         </tr>
